# Athena

./: .README.md  .gitmodules  Athena.code-workspace  README.md  cal.json  chilledcow_300x.avif  client_secrets.json  hello_world.c  hotel.py  interface_tweak.py  interfacev2.py  main.py  parsing.py  pass.txt  requirements.txt  test.py  test.txt
athena_apps/: acountant.py  advanced_if_stment.py  bkgrd_webscrp.py  blank.py  buget_planner.py  cal.json  carry.py  chat_history.json  display.json  game3speaking.py  interface.py  is_help.py  leetcod.py  linkedlsit.py  newidea2.py  node_calendar.py  parsing.py  pixiv.html  shit.py  sliding_window.py  swaper.py  test.py  thread.py  trsting.py  update.py
atna_go/: linkedlist.go
atna_music/: AMV Killua Zoldyck - The Legend Of Godspeed (2014) False Flag.m4a  Big Hero 6 - Immortals (Italian) HD.m4a  Cloak and Dagger (Freestyle Friday #5) Lyrics - e-dubble.m4a  E-Dubble - Class Clown.m4a  martell  (+22 more)
bioinfomatics/: counting_nucleotides.py  main.py  pyproject.toml  rosalind_rna.txt  test.py
bioinfomatics/dna_data/: bioconductor-bioinformatics-basics.ipynb  biopython-bioinformatics-basics.ipynb  rosalind_cons.txt  rosalind_dna.txt  rosalind_fib.txt  rosalind_fibd.txt  rosalind_gc.txt  rosalind_hamm.txt  rosalind_iprb.txt  rosalind_lcsm.txt  rosalind_mprt.txt  rosalind_prot.txt  rosalind_prtm.txt  rosalind_revc.txt  rosalind_subs.txt
coldtest/: Cold_Testing_40C_W_Internet.csv  Cold_Testing_Power_Cycling.csv  Cold_Testing_W_Insulation.csv  Cold_Testing_Without_internet.csv  Testing.csv  coldtest.py  coldtest_eng.py  pyproject.toml
(+187 files in other folders)
