[tool.poetry]
name = "bioinfomatics"
version = "0.1.0"
description = ""
authors = ["sy-md <mdorsetti733@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pysam = "^0.22.0"
requests = "^2.31.0"
biopython = "^1.83"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
